# simple-crypt

./: Cargo.toml
simple-crypt-daemon/: Cargo.toml
simple-crypt-daemon/src/: client.rs  keystore.rs  lib.rs  messages.rs  proto.rs  serve.rs  service.rs  service_impl.rs
simple-crypt-disk-formats/: Cargo.toml
simple-crypt-disk-formats/src/: encrypted_file.rs  keyfile.rs  lib.rs
simple-crypt-util/: Cargo.toml
simple-crypt-util/src/: lib.rs  memory_security.rs  pubkey_ext.rs  pwhash_limits.rs  serde_arrays.rs  serde_fixed_value.rs  serde_newtype.rs
src/: arguments.rs  daemon.rs  files.rs  keys.rs  main.rs  passwords.rs  serde_arrays.rs  serde_fixed_value.rs  serde_newtype.rs
src/disk_formats/: encrypted_file.rs  keyfile.rs  mod.rs
