[package]
name = "simple-crypt"
version = "0.1.0"
authors = ["Mathias Svensson <freaken@freaken.dk>"]

[dependencies]
sodiumoxide = "0.0.16"
structopt = "0.1.7"
structopt-derive = "0.1.6"
termion = "1.5.1"
base64 = "0.9.0"
failure = "0.1.1"
serde = "1.0.27"
serde_derive = "1.0.27"
bincode = "0.9.2"
arrayref = "0.3.4"
clap = "2.29.2"
libc = "0.2.36"
nix = "0.9.0"
tempfile = "2.2.0"
