[package]
name = "simple-crypt"
version = "0.1.0"
authors = ["Mathias Svensson <freaken@freaken.dk>"]

[dependencies]
sodiumoxide = "0.0.16"
structopt = "0.1.7"
structopt-derive = "0.1.6"
termion = "1.5.1"
failure = "0.1.1"
serde = "1.0.27"
serde_derive = "1.0.27"
bincode = "0.9.2"
clap = "2.29.2"
tempfile = "2.2.0"
simple-crypt-util = { path = "simple-crypt-util" }
simple-crypt-daemon = { path = "simple-crypt-daemon", optional = true }
static_assertions = "0.2.5"

[dev-dependencies]
rand = "0.4.2"

[features]
default = ["simple-crypt-daemon"]
