[package]
name = "simple-crypt-daemon"
version = "0.1.0"
authors = ["Mathias Svensson <freaken@freaken.dk>"]

[dependencies]
serde_cbor = "0.8.2"
serde_bytes = "0.10.3"
tokio-uds = "0.1.7"
tokio-io = "0.1.4"
tokio-proto = "0.1.1"
bytes = "0.4.6"
tokio-core = "0.1.12"
futures = "0.1.18"
simple-crypt-util = { path = "../simple-crypt-util" }
sodiumoxide = "0.0.16"
serde_derive = "1.0.27"
serde = "1.0.27"
tokio-service = "0.1.0"
failure = "0.1.1"
nix = "0.10.0"
daemonize = "0.2.3"
void = "1.0.2"
