[package]
name = "simple-crypt-daemon"
version = "0.1.0"
authors = ["Mathias Svensson <freaken@freaken.dk>"]

[dependencies]
bytes = "0.4.6"
daemonize = "0.2.3"
failure = "0.1.1"
futures = "0.1.18"
nix = "0.10.0"
serde = "1.0.27"
serde_cbor = "0.8.2"
serde_derive = "1.0.27"
sodiumoxide = "0.0.16"
tokio-core = "0.1.12"
tokio-io = "0.1.4"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"
tokio-uds = "0.1.7"
void = "1.0.2"
simple-crypt-util = { path = "../simple-crypt-util" }
