[package]
name = "simple-crypt-disk-formats"
version = "0.1.0"
authors = ["Mathias Svensson <freaken@freaken.dk>"]

[dependencies]
bincode = "0.9.2"
failure = "0.1.1"
serde = "1.0.27"
serde_derive = "1.0.27"
sodiumoxide = "0.0.16"
static_assertions = "0.2.5"
simple-crypt-util = { path = "../simple-crypt-util" }
